--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "algoliasearch": "^3.24.6",
     "vue": "^2.4.4",
     "vue-gh-pages": "^1.6.4"
   },
